Removed the sun only Base64Encoder and used the Apache version from commons-codec
git-svn-id: http://taverna.googlecode.com/svn@6386 bf327186-88b3-11dd-a302-d386e5130c1c